// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Radio defaultChecked 1`] = `
<span
  class="za-radio za-radio--checked"
>
  <span
    class="za-radio__widget"
  >
    <span
      class="za-radio__inner"
    >
      <i
        class="za-icon za-radio__marker za-icon--default za-icon--md"
        theme="default"
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="0 0 1000 1000"
          width="1em"
        >
          <path
            d="M119.415 524.046c-9.708-9.693-11.278-24.766-2.72-35.554l20.007-25.223c8.201-10.34 23.543-12.936 34.386-5.699l173.175 115.585c9.134 6.097 24.856 5.303 33.384-1.616l457.6-371.25c10.286-8.345 26.397-7.634 35.412 1.368l11.272 11.255c9.81 9.795 9.096 25.343-1.187 35.611l-491.14 490.414c-15.28 15.258-40.369 14.59-56.099-1.116l-214.09-213.775z"
            fill-rule="nonzero"
          />
        </svg>
      </i>
    </span>
  </span>
  <span
    class="za-radio__text"
  >
    选项一
  </span>
  <input
    aria-checked="true"
    checked=""
    class="za-radio__input"
    type="radio"
    value="0"
  />
</span>
`;

exports[`Radio renders correctly 1`] = `
<span
  class="za-radio"
>
  <span
    class="za-radio__widget"
  >
    <span
      class="za-radio__inner"
    >
      <i
        class="za-icon za-radio__marker za-icon--default za-icon--md"
        theme="default"
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="0 0 1000 1000"
          width="1em"
        >
          <path
            d="M119.415 524.046c-9.708-9.693-11.278-24.766-2.72-35.554l20.007-25.223c8.201-10.34 23.543-12.936 34.386-5.699l173.175 115.585c9.134 6.097 24.856 5.303 33.384-1.616l457.6-371.25c10.286-8.345 26.397-7.634 35.412 1.368l11.272 11.255c9.81 9.795 9.096 25.343-1.187 35.611l-491.14 490.414c-15.28 15.258-40.369 14.59-56.099-1.116l-214.09-213.775z"
            fill-rule="nonzero"
          />
        </svg>
      </i>
    </span>
  </span>
  <span
    class="za-radio__text"
  >
    选项一
  </span>
  <input
    aria-checked="false"
    class="za-radio__input"
    type="radio"
    value="0"
  />
</span>
`;

exports[`Radio type is button 1`] = `
<button
  class="za-radio"
  type="button"
>
  选项一
  <input
    aria-checked="false"
    class="za-radio__input"
    type="radio"
    value="0"
  />
</button>
`;

exports[`Radio type is list 1`] = `
<li
  class="za-list-item za-radio za-list-item--link"
>
  <div
    class="za-list-item__prefix"
  >
    <span
      class="za-radio__widget"
    >
      <span
        class="za-radio__inner"
      >
        <i
          class="za-icon za-radio__marker za-icon--default za-icon--md"
          theme="default"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="0 0 1000 1000"
            width="1em"
          >
            <path
              d="M119.415 524.046c-9.708-9.693-11.278-24.766-2.72-35.554l20.007-25.223c8.201-10.34 23.543-12.936 34.386-5.699l173.175 115.585c9.134 6.097 24.856 5.303 33.384-1.616l457.6-371.25c10.286-8.345 26.397-7.634 35.412 1.368l11.272 11.255c9.81 9.795 9.096 25.343-1.187 35.611l-491.14 490.414c-15.28 15.258-40.369 14.59-56.099-1.116l-214.09-213.775z"
              fill-rule="nonzero"
            />
          </svg>
        </i>
      </span>
    </span>
    <input
      aria-checked="false"
      class="za-radio__input"
      type="radio"
      value="0"
    />
  </div>
  <div
    class="za-list-item__wrapper"
  >
    <div
      class="za-list-item__inner"
    >
      <div
        class="za-list-item__title"
      >
        <span
          class="za-radio__text"
        >
          选项一
        </span>
        <input
          aria-checked="false"
          class="za-radio__input"
          type="radio"
          value="0"
        />
      </div>
    </div>
  </div>
</li>
`;

exports[`Radio.Group Radio checked 1`] = `
<div
  class="za-radio-group za-radio-group--button-xs za-radio-group--button-radius"
>
  <div
    class="za-radio-group__inner"
  >
    <span
      class="za-radio"
    >
      <span
        class="za-radio__widget"
      >
        <span
          class="za-radio__inner"
        >
          <i
            class="za-icon za-radio__marker za-icon--default za-icon--md"
            theme="default"
          >
            <svg
              aria-hidden="true"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="0 0 1000 1000"
              width="1em"
            >
              <path
                d="M119.415 524.046c-9.708-9.693-11.278-24.766-2.72-35.554l20.007-25.223c8.201-10.34 23.543-12.936 34.386-5.699l173.175 115.585c9.134 6.097 24.856 5.303 33.384-1.616l457.6-371.25c10.286-8.345 26.397-7.634 35.412 1.368l11.272 11.255c9.81 9.795 9.096 25.343-1.187 35.611l-491.14 490.414c-15.28 15.258-40.369 14.59-56.099-1.116l-214.09-213.775z"
                fill-rule="nonzero"
              />
            </svg>
          </i>
        </span>
      </span>
      <span
        class="za-radio__text"
      >
        选项一
      </span>
      <input
        aria-checked="false"
        class="za-radio__input"
        type="radio"
        value="0"
      />
    </span>
    <span
      class="za-radio za-radio--checked"
    >
      <span
        class="za-radio__widget"
      >
        <span
          class="za-radio__inner"
        >
          <i
            class="za-icon za-radio__marker za-icon--default za-icon--md"
            theme="default"
          >
            <svg
              aria-hidden="true"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="0 0 1000 1000"
              width="1em"
            >
              <path
                d="M119.415 524.046c-9.708-9.693-11.278-24.766-2.72-35.554l20.007-25.223c8.201-10.34 23.543-12.936 34.386-5.699l173.175 115.585c9.134 6.097 24.856 5.303 33.384-1.616l457.6-371.25c10.286-8.345 26.397-7.634 35.412 1.368l11.272 11.255c9.81 9.795 9.096 25.343-1.187 35.611l-491.14 490.414c-15.28 15.258-40.369 14.59-56.099-1.116l-214.09-213.775z"
                fill-rule="nonzero"
              />
            </svg>
          </i>
        </span>
      </span>
      <span
        class="za-radio__text"
      >
        选项二
      </span>
      <input
        aria-checked="true"
        checked=""
        class="za-radio__input"
        type="radio"
        value="1"
      />
    </span>
    <span
      class="za-radio"
    >
      <span
        class="za-radio__widget"
      >
        <span
          class="za-radio__inner"
        >
          <i
            class="za-icon za-radio__marker za-icon--default za-icon--md"
            theme="default"
          >
            <svg
              aria-hidden="true"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="0 0 1000 1000"
              width="1em"
            >
              <path
                d="M119.415 524.046c-9.708-9.693-11.278-24.766-2.72-35.554l20.007-25.223c8.201-10.34 23.543-12.936 34.386-5.699l173.175 115.585c9.134 6.097 24.856 5.303 33.384-1.616l457.6-371.25c10.286-8.345 26.397-7.634 35.412 1.368l11.272 11.255c9.81 9.795 9.096 25.343-1.187 35.611l-491.14 490.414c-15.28 15.258-40.369 14.59-56.099-1.116l-214.09-213.775z"
                fill-rule="nonzero"
              />
            </svg>
          </i>
        </span>
      </span>
      <span
        class="za-radio__text"
      >
        选项三
      </span>
      <input
        aria-checked="false"
        class="za-radio__input"
        type="radio"
        value="2"
      />
    </span>
  </div>
</div>
`;

exports[`Radio.Group defaultValue 1`] = `
<div
  class="za-radio-group za-radio-group--button-xs za-radio-group--button-radius"
>
  <div
    class="za-radio-group__inner"
  >
    <span
      class="za-radio"
    >
      <span
        class="za-radio__widget"
      >
        <span
          class="za-radio__inner"
        >
          <i
            class="za-icon za-radio__marker za-icon--default za-icon--md"
            theme="default"
          >
            <svg
              aria-hidden="true"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="0 0 1000 1000"
              width="1em"
            >
              <path
                d="M119.415 524.046c-9.708-9.693-11.278-24.766-2.72-35.554l20.007-25.223c8.201-10.34 23.543-12.936 34.386-5.699l173.175 115.585c9.134 6.097 24.856 5.303 33.384-1.616l457.6-371.25c10.286-8.345 26.397-7.634 35.412 1.368l11.272 11.255c9.81 9.795 9.096 25.343-1.187 35.611l-491.14 490.414c-15.28 15.258-40.369 14.59-56.099-1.116l-214.09-213.775z"
                fill-rule="nonzero"
              />
            </svg>
          </i>
        </span>
      </span>
      <span
        class="za-radio__text"
      >
        选项一
      </span>
      <input
        aria-checked="false"
        class="za-radio__input"
        type="radio"
        value="0"
      />
    </span>
    <span
      class="za-radio za-radio--checked"
    >
      <span
        class="za-radio__widget"
      >
        <span
          class="za-radio__inner"
        >
          <i
            class="za-icon za-radio__marker za-icon--default za-icon--md"
            theme="default"
          >
            <svg
              aria-hidden="true"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="0 0 1000 1000"
              width="1em"
            >
              <path
                d="M119.415 524.046c-9.708-9.693-11.278-24.766-2.72-35.554l20.007-25.223c8.201-10.34 23.543-12.936 34.386-5.699l173.175 115.585c9.134 6.097 24.856 5.303 33.384-1.616l457.6-371.25c10.286-8.345 26.397-7.634 35.412 1.368l11.272 11.255c9.81 9.795 9.096 25.343-1.187 35.611l-491.14 490.414c-15.28 15.258-40.369 14.59-56.099-1.116l-214.09-213.775z"
                fill-rule="nonzero"
              />
            </svg>
          </i>
        </span>
      </span>
      <span
        class="za-radio__text"
      >
        选项二
      </span>
      <input
        aria-checked="true"
        checked=""
        class="za-radio__input"
        type="radio"
        value="1"
      />
    </span>
    <span
      class="za-radio"
    >
      <span
        class="za-radio__widget"
      >
        <span
          class="za-radio__inner"
        >
          <i
            class="za-icon za-radio__marker za-icon--default za-icon--md"
            theme="default"
          >
            <svg
              aria-hidden="true"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="0 0 1000 1000"
              width="1em"
            >
              <path
                d="M119.415 524.046c-9.708-9.693-11.278-24.766-2.72-35.554l20.007-25.223c8.201-10.34 23.543-12.936 34.386-5.699l173.175 115.585c9.134 6.097 24.856 5.303 33.384-1.616l457.6-371.25c10.286-8.345 26.397-7.634 35.412 1.368l11.272 11.255c9.81 9.795 9.096 25.343-1.187 35.611l-491.14 490.414c-15.28 15.258-40.369 14.59-56.099-1.116l-214.09-213.775z"
                fill-rule="nonzero"
              />
            </svg>
          </i>
        </span>
      </span>
      <span
        class="za-radio__text"
      >
        选项三
      </span>
      <input
        aria-checked="false"
        class="za-radio__input"
        type="radio"
        value="2"
      />
    </span>
  </div>
</div>
`;

exports[`Radio.Group renders correctly 1`] = `
<div
  class="za-radio-group za-radio-group--button-xs za-radio-group--button-radius"
>
  <div
    class="za-radio-group__inner"
  >
    <span
      class="za-radio za-radio--checked"
    >
      <span
        class="za-radio__widget"
      >
        <span
          class="za-radio__inner"
        >
          <i
            class="za-icon za-radio__marker za-icon--default za-icon--md"
            theme="default"
          >
            <svg
              aria-hidden="true"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="0 0 1000 1000"
              width="1em"
            >
              <path
                d="M119.415 524.046c-9.708-9.693-11.278-24.766-2.72-35.554l20.007-25.223c8.201-10.34 23.543-12.936 34.386-5.699l173.175 115.585c9.134 6.097 24.856 5.303 33.384-1.616l457.6-371.25c10.286-8.345 26.397-7.634 35.412 1.368l11.272 11.255c9.81 9.795 9.096 25.343-1.187 35.611l-491.14 490.414c-15.28 15.258-40.369 14.59-56.099-1.116l-214.09-213.775z"
                fill-rule="nonzero"
              />
            </svg>
          </i>
        </span>
      </span>
      <span
        class="za-radio__text"
      >
        选项一
      </span>
      <input
        aria-checked="true"
        checked=""
        class="za-radio__input"
        type="radio"
        value="0"
      />
    </span>
    <span
      class="za-radio"
    >
      <span
        class="za-radio__widget"
      >
        <span
          class="za-radio__inner"
        >
          <i
            class="za-icon za-radio__marker za-icon--default za-icon--md"
            theme="default"
          >
            <svg
              aria-hidden="true"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="0 0 1000 1000"
              width="1em"
            >
              <path
                d="M119.415 524.046c-9.708-9.693-11.278-24.766-2.72-35.554l20.007-25.223c8.201-10.34 23.543-12.936 34.386-5.699l173.175 115.585c9.134 6.097 24.856 5.303 33.384-1.616l457.6-371.25c10.286-8.345 26.397-7.634 35.412 1.368l11.272 11.255c9.81 9.795 9.096 25.343-1.187 35.611l-491.14 490.414c-15.28 15.258-40.369 14.59-56.099-1.116l-214.09-213.775z"
                fill-rule="nonzero"
              />
            </svg>
          </i>
        </span>
      </span>
      <span
        class="za-radio__text"
      >
        选项二
      </span>
      <input
        aria-checked="false"
        class="za-radio__input"
        type="radio"
        value="1"
      />
    </span>
    <span
      class="za-radio"
    >
      <span
        class="za-radio__widget"
      >
        <span
          class="za-radio__inner"
        >
          <i
            class="za-icon za-radio__marker za-icon--default za-icon--md"
            theme="default"
          >
            <svg
              aria-hidden="true"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="0 0 1000 1000"
              width="1em"
            >
              <path
                d="M119.415 524.046c-9.708-9.693-11.278-24.766-2.72-35.554l20.007-25.223c8.201-10.34 23.543-12.936 34.386-5.699l173.175 115.585c9.134 6.097 24.856 5.303 33.384-1.616l457.6-371.25c10.286-8.345 26.397-7.634 35.412 1.368l11.272 11.255c9.81 9.795 9.096 25.343-1.187 35.611l-491.14 490.414c-15.28 15.258-40.369 14.59-56.099-1.116l-214.09-213.775z"
                fill-rule="nonzero"
              />
            </svg>
          </i>
        </span>
      </span>
      <span
        class="za-radio__text"
      >
        选项三
      </span>
      <input
        aria-checked="false"
        class="za-radio__input"
        type="radio"
        value="2"
      />
    </span>
  </div>
</div>
`;
